Arreglada primer parte del main, agregado responsive

--- a/index.html
+++ b/index.html
@@ -101,29 +101,24 @@
         <div class="box__first__part">
           <div class="container__first__part">
             <article class="article__container">
-              <header>
+              <header class="header_nav_title">
                 <h3 class="title__first__div">Introducing an extensible editor</h3>
               </header>
 
               <p class="parragraft__first__div">Blogr features an exceedingly intuitive interface which lets you focus
-                on
-                one
-                thing: creating content. The editor supports management of multiple blogs and allows easy manipulation
-                of
-                embeds
-                such as images, videos, and Markdown. Extensibility with plugins and themes provide easy ways to add
-                functionality or change the looks of a blog.</p>
+                on one thing: creating content. The editor supports management of multiple blogs and allows easy
+                manipulation of embeds such as images, videos, and Markdown. Extensibility with plugins and themes
+                provide easy ways to add functionality or change the looks of a blog.</p>
             </article>
 
             <article class="article__container">
-              <h3 class="title__first__div">Robust content management</h3>
-
+              <header class="header_nav_title">
+                <h3 class="title__first__div">Robust content management</h3>
+              </header>
               <p class="parragraft__first__div">
                 Flexible content management enables users to easily move
                 through posts. Increase the usability of your blog by adding customized categories, sections, format, or
-                flow.
-                With
-                this functionality, you’re in full control.
+                flow. With this functionality, you’re in full control.
               </p>
 
             </article>
