Parte 2 del main completa, agregado responsive

--- a/index.html
+++ b/index.html
@@ -131,13 +131,14 @@
 
 
       <div class="second__part">
-        <img src="./images/illustration-phones.svg" alt="" class="img__second__part">
+        <div alt="" class="img__second__part"></div>
         <article class="container__second__part">
           <header>
             <h3 class="title__second__div">State of the Art Infrastructure</h3>
           </header>
           <p class="parragraft__second__div">With reliability and speed in mind,
-            worldwide data centers provide the backbone for ultra-fast connectivity. This ensures your site will load
+            worldwide data centers provide the backbone for ultra-fast connectivity. This ensures your site will
+            load
             instantly, no matter where your readers are, keeping your site competitive.
           </p>
         </article>
@@ -154,8 +155,10 @@
             </header>
             <p class="parragraft__final__part">
               Blogr is a free and open source
-              application backed by a large community of helpful developers. It supports features such as code syntax
-              highlighting, RSS feeds, social media integration, third-party commenting tools, and works seamlessly with
+              application backed by a large community of helpful developers. It supports features such as code
+              syntax
+              highlighting, RSS feeds, social media integration, third-party commenting tools, and works seamlessly
+              with
               Google
               Analytics. The architecture is clean and is relatively easy to learn.
             </p>
