Arreglado todo el main, responsive del final completo

--- a/index.html
+++ b/index.html
@@ -145,11 +145,12 @@
       </div>
 
       <div class="final__part">
+
         <div class="final__part__img__container"></div>
 
         <div class="container__final__part">
 
-          <article>
+          <article class="final_art">
             <header>
               <h3 class="title__final__part">Free, open, simple</h3>
             </header>
@@ -164,7 +165,7 @@
             </p>
           </article>
 
-          <article>
+          <article class="final_art">
             <header class="title__final__part second__final__title">
               <h3>Powerful tooling</h3>
             </header>
