--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <div class="header__nav__container">
       <img src="./images/logo.svg" alt="" class="logo__blogr">
 
-      <nav class="links__menus">
+      <nav class="links__menus" id="menus">
 
-        <div class="menu">
-          <p class="menu-title">Product</p>
-          <ul class="list_nav list_disabled">
+        <div class="menu ">
+          <p class="menu-title" id="menu-1">Product</p>
+          <ul class="list_nav disabled" id="menu-list-1">
             <li class="item_nav_list"><a href="#">Overview</a></li>
             <li class="item_nav_list"><a href="#">Pricing</a></li>
             <li class="item_nav_list"><a href="#">Marketplace</a></li>
@@ -46,9 +46,9 @@
         </div>
 
 
-        <div class="menu">
+        <div class="menu" id="menu-2">
           <p class="menu-title">Company</p>
-          <ul class="list_nav list_disabled">
+          <ul class="list_nav  disabled">
             <li class="item_nav_list"><a href="#">About</a></li>
             <li class="item_nav_list"><a href="#">Team</a></li>
             <li class="item_nav_list"><a href="#">Blog</a></li>
@@ -57,9 +57,9 @@
         </div>
 
 
-        <div class="menu">
+        <div class="menu" id="menu-3">
           <p class="menu-title">Connect</p>
-          <ul class="list_nav list_disabled">
+          <ul class="list_nav  disabled">
             <li class="item_nav_list"><a href="#">Contact</a></li>
             <li class="item_nav_list"><a href="#">Newsletter</a></li>
             <li class="item_nav_list"><a href="#">LinkedIn</a></li>
@@ -72,7 +72,7 @@
           <a href="#" class="button__register">Sign Up</a>
         </div>
       </nav>
-
+      <div class="amburger__buttom amburger " id="amburger"></div>
     </div>
 
     <div class="landing__page__intro">
@@ -223,7 +223,7 @@
       Coded by <a href="#">Your Name Here</a>.
     </div>
   </aside>
-
+  <script src="./js/scripts.js"></script>
 </body>
 
 </html>
