--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
 
   <aside>
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a href="https://www.frontendmentor.io/profile/AparicioQA" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Brian Quesada Aparicio</a>.
     </div>
   </aside>
   <script src="./js/scripts.js"></script>
